# delivery

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 6d5e4c3b2a11_add_outbox.py  ccf9e766d810_initial.py
config/: application.yml
src/libs/: primitives.py
src/libs/ddd/: __init__.py  aggregate.py  aggregate_root.py  base_entity.py  domain_event.py  domain_event_publisher.py  null_domain_event_publisher.py  value_object.py
src/libs/errs/: __init__.py  domain_invariant_exception.py  error.py  general_errors.py  guard.py  result.py  unit_result.py
src/main/openapi/: openapi.yml
src/main/proto/: basket_events.proto  order_events.proto
src/microarch/delivery/: __init__.py  application_properties.py  default_domain_event_publisher.py  global_exception_handler.py  main.py  tasks.py
src/microarch/delivery/config/: __init__.py  application_event_publisher.py  container.py
tests/: conftest.py  test_libs.py
tests/adapters/in_/http/: test_complete_order_api.py  test_create_courier_api.py  test_create_order_api.py  test_get_couriers_api.py  test_get_orders_api.py  test_move_courier_api.py
tests/adapters/in_/kafka/: test_basket_confirmed_event_handler.py  test_kafka_consumer.py
tests/core/application/commands/: test_commands.py
tests/core/application/event_handlers/: test_order_domain_event_handler.py
tests/core/application/queries/: test_queries.py
tests/core/domain/model/: test_location.py  (+1 more)
tests/integration/: conftest.py  test_courier_repository.py
tests/integration/queries/: conftest.py
(+67 files in other folders)
